2022-09-26T00:36:43Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3124298977
* notice: last 14d: unq all: 5 5696
* notice: prev accum: outdated-unq outdated-all / unq all: 1052 64100 / 1092 69735
* notice: next accum: outdated-unq outdated-all / unq all: 1055 64500 / 1093 70196
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -20 / +2 +408 -0 -0 / 2 408
* notice: removed / changed dates: [2022-09-11] / [2022-09-12 2022-09-25]

2022-09-25T16:05:18Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3122799379
* notice: last 14d: unq all: 5 5635
* notice: prev accum: outdated-unq outdated-all / unq all: 1052 64100 / 1092 69754
* notice: next accum: outdated-unq outdated-all / unq all: 1052 64100 / 1092 69735
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -141 / +2 +260 -0 -0 / 2 260
* notice: removed / changed dates: [] / [2022-09-11 2022-09-25]

2022-09-25T08:08:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3121418248
* notice: last 14d: unq all: 5 5654
* notice: prev accum: outdated-unq outdated-all / unq all: 1052 64100 / 1091 69787
* notice: next accum: outdated-unq outdated-all / unq all: 1052 64100 / 1092 69754
* notice: prev exec diff / last date diff / accum: unq all: +2 +140 -1 -173 / +2 +138 -0 -0 / 2 138
* notice: removed / changed dates: [] / [2022-09-11 2022-09-24 2022-09-25]

2022-09-25T00:33:39Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3120339089
* notice: last 14d: unq all: 5 5687
* notice: prev accum: outdated-unq outdated-all / unq all: 1050 63692 / 1091 69317
* notice: next accum: outdated-unq outdated-all / unq all: 1052 64100 / 1091 69787
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -19 / +2 +408 -0 -0 / 2 408