@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-26T00:36:43Z",
-  "count" : 387,
+  "timestamp" : "2022-09-26T08:10:37Z",
+  "count" : 212,
   "count_minmax" : [ 137, 407 ],
-  "count_decinc" : [ -20, +407 ],
+  "count_decinc" : [ -195, +407 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
