@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-09-26T08:10:37Z",
+  "count" : 138,
+  "count_minmax" : [ 138, 138 ],
+  "count_decinc" : [ -0, +138 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
+}
