@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-26T00:36:43Z",
+  "timestamp" : "2022-09-26T08:10:37Z",
   "count_outdated" : 64500,
   "uniques_outdated" : 1055,
-  "count" : 70196,
-  "uniques" : 1093,
+  "count" : 70161,
+  "uniques" : 1096,
   "clones" : [
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 387,
+      "count": 212,
       "count_minmax": [ 137, 407 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 408,
-      "count_minmax": [ 138, 408 ],
+      "count": 410,
+      "count_minmax": [ 138, 410 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
+      "count": 138,
+      "count_minmax": [ 138, 138 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
