@@ -1,10 +1,10 @@
 {
-  "count": 5696,
+  "count": 5661,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 387,
+      "count": 212,
       "uniques": 2
     },
     {
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 408,
+      "count": 410,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
+      "count": 138,
+      "uniques": 3
     }
   ]
 }
