@@ -1,3 +1,11 @@
+2022-09-26T08:10:37Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126100702
+* notice: last 14d: unq all: 5 5661
+* notice: prev accum: outdated-unq outdated-all / unq all: 1055 64500 / 1093 70196
+* notice: next accum: outdated-unq outdated-all / unq all: 1055 64500 / 1096 70161
+* notice: prev exec diff / last date diff / accum: unq all: +3 +140 -0 -175 / +3 +138 -0 -0 / 3 138
+* notice: removed / changed dates: [] / [2022-09-12 2022-09-25 2022-09-26]
+
 2022-09-26T00:36:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3124298977
 * notice: last 14d: unq all: 5 5696
